--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,18 @@
   --clr-glass-blank: 0, 0%, 0%, 0.062;
   --clr-span: 0, 69%, 85%, 0.267;
 }
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(31, 28, 22);
+  background: linear-gradient(
+    90deg,
+    rgba(31, 28, 22, 1) 0%,
+    rgba(64, 61, 31, 1) 21%,
+    rgba(48, 36, 3, 1) 59%,
+    rgba(97, 76, 18, 1) 100%
+  );
+  width: 100%;
+  height: 100vh;
+}
