--- a/src/Components/Styles/Modal.css
+++ b/src/Components/Styles/Modal.css
@@ -19,6 +19,30 @@
   color: var(--clr-white);
   font-size: clamp(0.1rem, 5vw + 0.5rem, 3rem);
 }
+.python-logo {
+  background-image: url(src/assets/python-logo.png);
+  background-size: 20%;
+  background-repeat: no-repeat;
+  background-position: 13%;
+}
+.angular-logo {
+  background-image: url(src/assets/angular-logo.png);
+  background-size: 20%;
+  background-repeat: no-repeat;
+  background-position: 11%;
+}
+.reactjs-logo {
+  background-image: url(src/assets/reactjs-logo.png);
+  background-size: 20%;
+  background-repeat: no-repeat;
+  background-position: 11%;
+}
+.frontEnd-logo {
+  background-image: url(src/assets/html5-js-css3-logo.png);
+  background-size: 20%;
+  background-repeat: no-repeat;
+  background-position: 5%;
+}
 .close-modal {
   position: absolute;
   cursor: pointer;
