--- a/src/Components/Styles/Section.css
+++ b/src/Components/Styles/Section.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&family=Playfair+Display+SC:wght@900&family=UnifrakturMaguntia&display=swap');
 .section {
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.575), rgba(0, 0, 0, 0.308)),
-    url(../../assets/man3.jpeg);
+    url(../../assets/1.jpeg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -15,19 +16,20 @@
   max-width: 60ch;
 }
 .main-header {
-  text-transform: uppercase;
-  font-size: 15px;
+  font-size: 30px;
   color: var(--clr-white);
+  font-family: 'Bodoni Moda', serif;
 }
 .main-header span {
   display: block;
   font-size: clamp(1rem, 14vw + 1rem, 8rem);
-  color: hsl(0, 69%, 85%, 0.267);
+  color: hsl(41, 57%, 41%, 0.267);
+  font-family: 'Playfair Display SC', serif;
 }
 .main-status {
-  text-transform: uppercase;
-  font-size: clamp(0.3rem, 0.4vw + 0.4rem, 2rem);
+  font-size: clamp(1.2rem, 0.4vw + 0.4rem, 2rem);
   color: hsl(var(--class-glass-font));
+  font-family: 'Bodoni Moda', serif;
 }
 .main-btn {
   margin-block: 1rem;
@@ -37,6 +39,7 @@
   text-decoration: none;
   color: var(--clr-white);
   text-transform: uppercase;
+  font-family: 'Bodoni Moda', serif;
 }
 @media (max-width: 900px) {
   .main {
