--- a/src/Components/Styles/Modal.css
+++ b/src/Components/Styles/Modal.css
@@ -20,25 +20,25 @@
   font-size: clamp(0.1rem, 5vw + 0.5rem, 3rem);
 }
 .python-logo {
-  background-image: url(src/assets/python-logo.png);
+  background-image: url(../../assets/python-logo.png);
   background-size: 20%;
   background-repeat: no-repeat;
   background-position: 13%;
 }
 .angular-logo {
-  background-image: url(src/assets/angular-logo.png);
+  background-image: url(../../assets/angular-logo.png);
   background-size: 20%;
   background-repeat: no-repeat;
   background-position: 11%;
 }
 .reactjs-logo {
-  background-image: url(src/assets/reactjs-logo.png);
+  background-image: url(../../assets/reactjs-logo.png);
   background-size: 20%;
   background-repeat: no-repeat;
   background-position: 11%;
 }
 .frontEnd-logo {
-  background-image: url(src/assets/html5-js-css3-logo.png);
+  background-image: url(../../assets/html5-js-css3-logo.png);
   background-size: 20%;
   background-repeat: no-repeat;
   background-position: 5%;
@@ -52,8 +52,23 @@
   font-size: 18px;
 }
 @media (min-width: 50em) {
+  .cart a {
+    margin-left: 8%;
+  }
   .modal {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  }
+  .python-logo {
+    background-position: 9%;
+  }
+  .angular-logo {
+    background-position: 6%;
+  }
+  .reactjs-logo {
+    background-position: 10%;
+  }
+  .frontEnd-logo {
+    background-position: 1%;
   }
 }
