--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -40,6 +40,10 @@
 }
 
 @media (max-width: 50em) {
+  .logo {
+    width: 25%;
+    height: 7vh;
+  }
   .list-items {
     flex-direction: column;
     position: fixed;
