--- a/src/Components/Styles/Projects.css
+++ b/src/Components/Styles/Projects.css
@@ -63,9 +63,24 @@
   font-size: clamp(2rem, 0.3vw + 0.5rem, 2rem);
   margin-block: -46rem;
 }
-@media (min-width: 600px) {
+@media (max-width: 50em) {
   .projects {
     place-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
+    margin-top: -12vh;
+  }
+  .proj-carts {
+    height: 56vw;
+    line-height: 1.5;
+  }
+  .proj-carts h3 {
+    text-transform: uppercase;
+    margin-block: -4rem;
+    margin-left: 70%;
+  }
+  .proj-carts p {
+    text-transform: uppercase;
+    font-size: clamp(2rem, 0.3vw + 0.5rem, 2rem);
+    margin-block: 7rem;
   }
 }
