--- a/src/Components/Styles/Qualities.css
+++ b/src/Components/Styles/Qualities.css
@@ -90,10 +90,16 @@
   transition: 500ms;
   transform: scale(1.08);
 }
-@media (max-width: 1200px) {
+@media (max-width: 50em) {
   .info-section {
     flex-direction: column;
-    padding-block: 2rem;
+    padding-block: 6rem;
     padding-inline: 1rem;
+  }
+  .info-about p {
+    font-size: clamp(1.2rem, 0.4vw + 0.4rem, 2rem);
+  }
+  .info-content p {
+    font-size: clamp(1rem, 0.5vw + 0.5rem, 4rem);
   }
 }
