--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -23,6 +23,8 @@
   text-transform: uppercase;
   text-decoration: none;
   color: hsl(var(--clr-glass));
+}
+a {
   font-size: clamp(0.5rem, 0.5vw+ 0.5rem, 3.5rem);
 }
 .list-items li a:hover,
